--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,67 @@
-Not implemented yet! 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
+</head>
+<nav>
+    <ol>
+        <li class="crumb"><a href="./home.html">Home</a></li>
+        <li class="crumb"><a href="./profile.html">Profile</a></li>
+        <li class="crumb"><a href="./about.html">About</a></li>
+    </ol>
+</nav>
+<body>
+    <content>
+        <h1>The Man. The Myth. The Legend.</h1>
+        <img src="https://archive.sltrib.com/images/2010/1215/AF-timpview_121610~5.jpg">
 
+        <h2>Skills</h2>
+            <ul>
+                <li>Baller</li>
+                <li>Shot Caller</li>
+                <li>Coder</li>
+            </ul>
+
+        <h2>Interests</h2>
+            <ul>
+                <li>Backpacking</li>
+                <li>Gyming</li>
+                <li>Pickleballing</li>
+                <li>Reading</li>
+            </ul>
+
+        <h2>Career Goals</h2>
+            <p>Early on in my career I want to bust my balls to become the best coder this side of the Mississippi.
+                I want to work in companies where there will be senior developers to mentor and coach me to help me along 
+                in my coding journey. As I become more proficient and confident in my abilities I want to start some hide 
+                hussles making applications that will eventually make me my millions so I can retire early and coach a
+                small town high school basketball team and have all the time in the world to backpack, fish, and explore 
+                the world like a millenial such as myself was born to do.
+            </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </content>
+    
+</body>
+</html>
 <br>
 <br>
 
