--- a/profile.html
+++ b/profile.html
@@ -43,23 +43,14 @@
                 the world like a millenial such as myself was born to do.
             </p>
 
-
-
-
-
-
-
-
-
-
-
-
-
+            <button id="color">My Favorite Color</button>
+            <button id="place">My Favorite Place</button>
+            <button id="ritual">My Favorite Ritual</button>
 
 
 
     </content>
-    
+    <script src="profile.js"></script>
 </body>
 </html>
 <br>
